<resources>
    <string name="app_name">WeatherApp</string>
    <string name="breathe_smarter">Breathe Smarter</string>
    <string name="get_real_time_aqi_instantly">Get real time AQI \ninstantly</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="admin">Admin</string>
    <string name="citizen">Citizen</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="password_validity">Password must contain: at least one lowercase letter, one uppercase letter, one number, and one special character, and be at least 8 characters</string>
    <string name="email_validity">Enter a valid email</string>
    <string name="name_validity">Enter a valid name</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="temp">Temp</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="stats">Stats</string>
    <string name="air_quality_stats">Air Quality Stats</string>
    <string name="date">Date</string>
    <string name="open_calender">Open Calender</string>
    <string name="chart">Chart</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="recent_readings">Recent Readings</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="smart_aqi_weather">Smart AQI Weather</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="facebook_app_id">26242668302055174</string>
    <string name="facebook_client_token">0277a3bc6033adb2f4d13bbe7645b915</string>
    <string name="phone_varification">Phone Varification</string>
    <string name="we_will_send_you_one_time_password">We will send you <b>One Time Password</b></string>
    <string name="on_this_mobile_number">on this mobile number</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="_continue">Continue</string>
    <string name="_123456789">123456789</string>
    <string name="enter_otp_to_verify_your_number">Enter OTP to verify your number</string>
    <string name="verify">Verify</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="view_all">View All</string>
    <string name="no_aqi_data_found">No AQI data found</string>
    <string name="citizens">Citizens</string>
    <string name="master_aqi">Master AQI</string>
    <string name="notofication">Notofication</string>
</resources>